--- a/TI22CSDHUEapplication/app/src/main/res/values/strings.xml
+++ b/TI22CSDHUEapplication/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">HUE</string>
+    <string name="app_name">Lamp App Marleen - Lorenzo</string>
+    <string name="hue_label">Hue</string>
+    <string name="sat_label">Saturation</string>
+    <string name="bri_label">Brightness</string>
 </resources>
